[gd_scene load_steps=9 format=3 uid="uid://b4lm6wvgyymd7"]

[ext_resource type="Theme" uid="uid://bwnv8b362a2w7" path="res://menus/menu_theme.tres" id="1_316cm"]
[ext_resource type="Texture2D" uid="uid://dpn32cg5213al" path="res://assets/art/menus/previous_world_button.png" id="2_26sh7"]
[ext_resource type="Script" path="res://ui/wardrobe.gd" id="2_wcdn3"]
[ext_resource type="Texture2D" uid="uid://r7wqniih52i7" path="res://assets/art/characters/player.png" id="3_gv54v"]
[ext_resource type="Texture2D" uid="uid://cgwhp5aueeb4" path="res://assets/art/menus/next_world_button.png" id="4_uvq54"]

[sub_resource type="Animation" id="Animation_gf2j5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("armor_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_w1njp"]
resource_name = "animate"
length = 1.8
loop_mode = 1
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("armor_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5vurh"]
_data = {
"RESET": SubResource("Animation_gf2j5"),
"animate": SubResource("Animation_w1njp")
}

[node name="wardrobe" type="ColorRect"]
visible = false
custom_minimum_size = Vector2(1200, 827)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 360.0
offset_top = 80.0
offset_right = -360.0
offset_bottom = -173.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_316cm")
color = Color(0, 0, 0, 0.847059)
script = ExtResource("2_wcdn3")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="left_button" type="Button" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../right_button")
focus_neighbor_right = NodePath("../right_button")
icon = ExtResource("2_26sh7")
icon_alignment = 1
expand_icon = true

[node name="Control" type="Control" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(320, 320)
layout_mode = 2

[node name="armor_sprite" type="Sprite2D" parent="CenterContainer/HBoxContainer/Control"]
position = Vector2(160, 160)
scale = Vector2(20, 20)
texture = ExtResource("3_gv54v")
hframes = 6
vframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="CenterContainer/HBoxContainer/Control"]
libraries = {
"": SubResource("AnimationLibrary_5vurh")
}
autoplay = "animate"

[node name="right_button" type="Button" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../left_button")
focus_neighbor_right = NodePath("../left_button")
icon = ExtResource("4_uvq54")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="CenterContainer/HBoxContainer/left_button" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/right_button" to="." method="_on_right_button_pressed"]
